# yesqa_setup

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg  tox.ini  yesqa_setup.py
tests/: setup.cfg  yesqa_test.py
