[metadata]
name = yesqa_setup
version = 0.0.1
description = Check setup.cfg per-file-ignores
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lamersfa/yesqa_setup
author = Fabian Lamers
author_email = fabian.lamers@sogeti.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = yesqa_setup
install_requires =
    flake8>=3.8
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    yesqa_setup = yesqa_setup:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
statistics = False
doctests = True
inline-quotes = double
max-returns = 2
max-line-length = 120
max-complexity = 6
select = B,C,D,E,F,W,T4,B9,B901,WPS
ignore = WPS305
